mitra panel, link affiliate by konsultasi

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -15,9 +15,10 @@
       "contact": "Contact",
       "partner": "Partner"
     },
-    "cta": {
-      "consult": "Consult"
-    },
+  "cta": {
+    "consult": "Consult",
+    "panel": "Mitra Panel"
+  },
     "aria": {
       "openMenu": "Open menu"
     },
