--- a/src/lib/i18n/locales/id.json
+++ b/src/lib/i18n/locales/id.json
@@ -15,9 +15,10 @@
       "contact": "Hubungi Kami",
       "partner": "Mitra"
     },
-    "cta": {
-      "consult": "Konsultasi"
-    },
+  "cta": {
+    "consult": "Konsultasi",
+    "panel": "Mitra"
+  },
     "aria": {
       "openMenu": "Buka menu"
     },
