--- a/public/locales/en/mitra.json
+++ b/public/locales/en/mitra.json
@@ -1,13 +1,13 @@
 {
   "meta": {
-    "title": "Affiliate Partner Program - UrusMerek.id",
-    "description": "Join UrusMerek's affiliate program and earn IDR 100,000 commission for each verified sale."
+    "title": "UrusMerek Mitra Program - UrusMerek.id",
+    "description": "Join UrusMerek's Mitra program and earn IDR 100,000 commission for each verified sale."
   },
-  "hero_title": "UrusMerek Affiliate Partner Program",
+  "hero_title": "UrusMerek Mitra Program",
   "hero_subtitle": "Earn additional income by recommending our trusted trademark registration services",
   "commission_highlight": "IDR 100,000 Commission/Verified Sale",
   "program_title": "About Partner Program",
-  "program_desc": "UrusMerek's affiliate program is designed to help you earn additional income by recommending our trademark registration services to your contacts, clients, or audience. Every time someone registers through your referral link and makes a purchase, you will earn a commission.",
+  "program_desc": "UrusMerek's Mitra program is designed to help you earn additional income by recommending our trademark registration services to your contacts, clients, or audience. Every time someone registers through your referral link and makes a purchase, you will earn a commission.",
   "benefits_title": "Benefits of Becoming a Partner",
   "benefits": [
     {
@@ -44,7 +44,7 @@
     "Spamming, black-hat marketing, or other fraudulent practices are prohibited",
     "We reserve the right to cancel partnerships if violations are found"
   ],
-  "how_it_works_title": "How the Partner Program Works",
+  "how_it_works_title": "How the Mitra Program Works",
   "how_it_works": [
     {
       "step": "1",
@@ -54,7 +54,7 @@
     {
       "step": "2",
       "title": "Get Referral Link",
-      "description": "Access dashboard and copy your unique referral link"
+      "description": "Access the dashboard and copy your unique referral link"
     },
     {
       "step": "3",
@@ -67,10 +67,10 @@
       "description": "Receive IDR 100,000 commission for each verified sale"
     }
   ],
-  "register_title": "Register as Partner",
+  "register_title": "Register as Mitra",
   "register_subtitle": "Already have an account?",
   "register_login_link": "Login here",
-  "login_title": "Partner Login",
+  "login_title": "Mitra Login",
   "login_subtitle": "Don't have an account?",
   "login_register_link": "Register here",
   "form": {
@@ -84,10 +84,10 @@
     "account_holder": "Account Holder Name",
     "register_button": "Register Now",
     "login_button": "Login",
-    "register_success": "Registration successful! Please login to access Partner Panel.",
-    "login_success": "Login successful! Redirecting to Partner Panel..."
+    "register_success": "Registration successful! Please login to access the Mitra Panel.",
+    "login_success": "Login successful! Redirecting to the Mitra Panel..."
   },
-  "faq_title": "Partner FAQ",
+  "faq_title": "Mitra FAQ",
   "faq": [
     {
       "question": "How do I earn commissions?",
