--- a/public/locales/id/mitra.json
+++ b/public/locales/id/mitra.json
@@ -1,13 +1,13 @@
 {
   "meta": {
-    "title": "Program Mitra Afiliasi - UrusMerek.id",
-    "description": "Bergabunglah dengan program afiliasi UrusMerek dan dapatkan komisi Rp100.000 untuk setiap penjualan terverifikasi."
+    "title": "Program Mitra UrusMerek - UrusMerek.id",
+    "description": "Bergabunglah dengan Program Mitra UrusMerek dan dapatkan komisi Rp100.000 untuk setiap penjualan terverifikasi."
   },
-  "hero_title": "Program Mitra Afiliasi UrusMerek",
+  "hero_title": "Program Mitra UrusMerek",
   "hero_subtitle": "Dapatkan penghasilan tambahan dengan merekomendasikan layanan pendaftaran merek terpercaya",
   "commission_highlight": "Komisi Rp100.000/Penjualan Terverifikasi",
   "program_title": "Tentang Program Mitra",
-  "program_desc": "Program afiliasi UrusMerek dirancang untuk membantu Anda mendapatkan penghasilan tambahan dengan merekomendasikan layanan pendaftaran merek kami kepada kenalan, klien, atau audiens Anda. Setiap kali seseorang mendaftar melalui link referral Anda dan melakukan pembelian, Anda akan mendapatkan komisi.",
+  "program_desc": "Program Mitra UrusMerek dirancang untuk membantu Anda mendapatkan penghasilan tambahan dengan merekomendasikan layanan pendaftaran merek kami kepada kenalan, klien, atau audiens Anda. Setiap kali seseorang mendaftar melalui link referral Anda dan melakukan pembelian, Anda akan mendapatkan komisi.",
   "benefits_title": "Keuntungan Menjadi Mitra",
   "benefits": [
     {
